# Code

./: .gitignore  README.md
asd_lab_2/: CMakeLists.txt  hash_table.cpp  hash_table.hpp  linked_list.cpp  main.cpp  nodes.hpp  o_hash_table.cpp  o_hash_table.hpp  s_hash_table.cpp  s_hash_table.hpp  s_linked_list.cpp  test_hash_table.cpp  test_o_hash_table.cpp
asd_lab_3/: CMakeLists.txt  main.cpp  priority_queue.cpp  priority_queue.hpp  treesort.cpp
asd_lab_4/: BST.cpp  BST.hpp  CMakeLists.txt  algorithms.cpp  main.cpp  testAutocompletion.cpp  testBinarySearchTree.cpp  testMergeSplit.cpp
control test/: prog1.cpp  prog2.cpp  prog3.cpp
olympiad/A/: Program.cs
olympiad/D/: CMakeLists.txt  main.cpp
olympiad/E/: CMakeLists.txt  main.cpp
olympiad/F/: CMakeLists.txt  main.cpp
olympiad/G/: CMakeLists.txt  main.cpp
olympiad/G(C#)/: G(C#).csproj  Program.cs
olympiad/H/: CMakeLists.txt  main.cpp
prog_lab_10/: CMakeLists.txt  main.cpp
prog_lab_12/: CMakeLists.txt  main.cpp
prog_lab_13/: CMakeLists.txt  main.cpp
prog_lab_14/: CMakeLists.txt  algorithms.cpp  algorithms.hpp  data.cpp  data.hpp  file_io.cpp  file_io.hpp  globals.hpp  main.cpp  queries.cpp  queries.hpp  structures.hpp
prog_lab_15/: CMakeLists.txt  main.cpp
prog_lab_16/: CMakeLists.txt  main.cpp
prog_lab_17/: CMakeLists.txt  main.cpp
rb-tree/: Program.cs  rb-tree.csproj
strokesCounter/: Program.cs  chinese.txt
test/: CMakeLists.txt  Data.cpp  DynamicArray.cpp  PriorityQueue.cpp  PriorityQueue.hpp  huest.cpp  main.cpp
